[project]
name = "denbu"
version = "0.1.0"
description = ""
authors = [
    { name = "romanrabirokh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "clickhouse-driver (<4) ; python_version >= \"3.11\" and python_version < \"4\"",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
